--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
         "axios": "^1.7.6",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^1.0",
-        "postcss": "^8.4.47",
-        "tailwindcss": "^3.4.13",
         "vite": "^6.0"
     },
     "dependencies": {
         "@inertiajs/inertia": "^0.11.1",
         "@inertiajs/vue3": "^2.0.0",
+        "@tailwindcss/vite": "^4.0.0",
+        "tailwindcss": "^4.0.0",
         "vue": "^3.5.13"
     }
 }
