--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@inertiajs/inertia": "^0.11.1",
         "@inertiajs/vue3": "^2.0.0",
         "@tailwindcss/vite": "^4.0.0",
+        "boxicons": "^2.1.4",
         "tailwindcss": "^4.0.0",
         "vue": "^3.5.13"
     }
