--- a/.github/workflows/deploy-to-prod.yml
+++ b/.github/workflows/deploy-to-prod.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Verificar token
-        run: echo "${{ secrets.PROD_GIT_TOKEN }}
+        run: echo "${{ secrets.PROD_GIT_TOKEN }}"
 
       - name: Configurar acceso a repo de producción
         run: |
