--- a/.github/workflows/deploy-to-prod.yml
+++ b/.github/workflows/deploy-to-prod.yml
@@ -34,16 +34,7 @@ jobs:
 
       - name: Merge master (pre) → main (prod)
         run: |
-          git fetch origin  # Asegura que origin/master está actualizado
-          git fetch produccion  # Asegura que produccion/main está actualizado
-          
-          # Si la rama 'main' existe en producción, hacer checkout
-          if git show-ref --verify --quiet refs/remotes/produccion/main; then
-            git checkout main
-          else
-            echo "⚠️ La rama 'main' no existe en el repo de producción. Saliendo..."
-            exit 1
-          fi
-
-          git merge origin/master --no-ff --no-edit || echo "Error al hacer merge"
+          git fetch produccion
+          git checkout main
+          git merge origin/master --no-ff --no-edit --allow-unrelated-histories || echo "Error al hacer merge"
           git push produccion main || echo "Error al hacer push"
