--- a/.github/workflows/deploy-to-prod.yml
+++ b/.github/workflows/deploy-to-prod.yml
@@ -32,9 +32,23 @@ jobs:
           git remote add produccion git@github.com:MonlauAlumni/produccion.git
           git fetch produccion || echo "Error al hacer fetch del repo de producción"
 
-      - name: Merge master (pre) → main (prod)
+      - name: Asegurarse de que master está actualizado
+        run: |
+          git fetch origin
+          git checkout master
+          git pull origin master
+
+      - name: Resetear main (prod) a master (pre) (OPCIÓN LIMPIA)
         run: |
           git fetch produccion
           git checkout main
-          git merge origin/master --no-ff --no-edit --allow-unrelated-histories || echo "Error al hacer merge"
-          git push produccion main || echo "Error al hacer push"
+          git reset --hard origin/master  # Esto reemplaza todo el contenido de main por el de master
+          git push produccion main --force  # Usa --force para sobrescribir en el remoto
+
+      # Alternativa con merge (si prefieres mantener historial)
+      # - name: Merge master (pre) → main (prod)
+      #   run: |
+      #     git fetch produccion
+      #     git checkout main
+      #     git merge origin/master --no-ff --no-edit --allow-unrelated-histories || echo "Error al hacer merge"
+      #     git push produccion main || echo "Error al hacer push"
