--- a/.github/workflows/deploy-to-prod.yml
+++ b/.github/workflows/deploy-to-prod.yml
@@ -29,15 +29,20 @@ jobs:
         run: |
           git config --global user.email "actions@github.com"
           git config --global user.name "GitHub Actions"
+          git remote remove produccion || echo "No se encontró remoto 'produccion'"
           git remote add produccion git@github.com:MonlauAlumni/produccion.git
           git fetch produccion || echo "Error al hacer fetch del repo de producción"
+
 
       - name: Asegurarse de que master está actualizado
         run: |
           git fetch origin
           git checkout master
           git pull origin master
-
+      - name: Actualizar el índice de Git
+        run: |
+          git gc --prune=now  # Limpiar los objetos no utilizados
+          git fsck --full  # Comprobar la integridad del repositorio
       - name: Resetear main (prod) a master (pre) (OPCIÓN LIMPIA)
         run: |
           git fetch produccion
