--- a/.github/workflows/deploy-to-prod.yml
+++ b/.github/workflows/deploy-to-prod.yml
@@ -1,46 +1,20 @@
-name: Deploy to Production
+name: Sync Preproduccion to Produccion
 
 on:
   push:
     branches:
-      - master  
+      - main
+    # O puedes usar cualquier otra rama en 'preproduccion' que desees.
 
 jobs:
-  deploy:
+  sync:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout código
-        uses: actions/checkout@v3
+    - name: Checkout Preproduccion repository
+      uses: actions/checkout@v3
 
-      - name: Configurar SSH
-        run: |
-          mkdir -p ~/.ssh
-          echo "${{ secrets.SSH_PRIVATE_KEY }}" | tr -d '\r' > ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa
-          ssh-keyscan github.com >> ~/.ssh/known_hosts
-
-      - name: Debug SSH
-        run: |
-          ls -la ~/.ssh
-          ssh -T git@github.com || echo "Error de autenticación SSH"
-
-      - name: Configurar acceso a repo de producción
-        run: |
-          git config --global user.email "actions@github.com"
-          git config --global user.name "GitHub Actions"
-          git remote add produccion git@github.com:MonlauAlumni/produccion.git
-          git fetch produccion || echo "Error al hacer fetch del repo de producción"
-
-      - name: Merge master (pre) → main (prod)
-        run: |
-          git fetch produccion
-          git checkout main
-          git merge origin/master --no-ff --no-edit --allow-unrelated-histories || echo "Error al hacer merge"
-
-      - name: Configurar el búfer de Git
-        run: |
-          git config --global http.postBuffer 524288000
-      - name: Push forzado a producción
-        run: |
-          git push --force produccion main || echo "Error al hacer push"
+    - name: Push to Produccion
+      run: |
+        git remote add produccion git@github.com:MonlauAlumni/produccion.git
+        git push --force produccion main
