--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
         "boxicons": "^2.1.4",
         "nprogress": "^0.2.0",
         "tailwindcss": "^4.0.3",
-        "vue": "^3.5.13"
+        "vue": "^3.5.13",
+        "vue-i18n": "^11.1.2",
+        "vue-router": "^4.5.0"
     }
 }
