--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
         "@inertiajs/inertia": "^0.11.1",
         "@inertiajs/vue3": "^2.0.0",
         "@tailwindcss/vite": "^4.0.0",
+        "@vueup/vue-quill": "^1.2.0",
         "boxicons": "^2.1.4",
+        "dompurify": "^3.2.4",
         "nprogress": "^0.2.0",
         "tailwindcss": "^4.0.3",
         "vue": "^3.5.13",
