--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
         "vite": "^6.0"
     },
     "dependencies": {
+        "@fullcalendar/core": "^6.1.15",
+        "@fullcalendar/daygrid": "^6.1.15",
+        "@fullcalendar/interaction": "^6.1.15",
+        "@fullcalendar/timegrid": "^6.1.15",
+        "@fullcalendar/vue3": "^6.1.15",
         "@inertiajs/inertia": "^0.11.1",
         "@inertiajs/vue3": "^2.0.0",
         "@tailwindcss/vite": "^4.0.0",
