--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
         "@vueup/vue-quill": "^1.2.0",
         "boxicons": "^2.1.4",
         "dompurify": "^3.2.4",
+        "laravel-echo": "^2.0.2",
         "nprogress": "^0.2.0",
+        "pusher-js": "^8.4.0",
         "tailwindcss": "^4.0.3",
         "vue": "^3.5.13",
         "vue-i18n": "^11.1.2",
