--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "tailwindcss": "^4.0.3",
         "vue": "^3.5.13",
         "vue-i18n": "^11.1.2",
+        "vue-multiselect": "^3.2.0",
         "vue-router": "^4.5.0"
     }
 }
