--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
         "@tailwindcss/vite": "^4.0.0",
         "@vueup/vue-quill": "^1.2.0",
         "boxicons": "^2.1.4",
+        "chart.js": "^4.4.9",
         "dompurify": "^3.2.4",
         "nprogress": "^0.2.0",
         "tailwindcss": "^4.0.3",
         "vue": "^3.5.13",
+        "vue-chartjs": "^5.3.2",
         "vue-i18n": "^11.1.2",
         "vue-multiselect": "^3.2.0",
         "vue-router": "^4.5.0"
